Fixed orientation and display issues on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,8 @@
   background-color: rgb(241, 241, 241)5)
   position: absolute;
   top:0px;
+  overflow:hidden;
+  height: 100%; 
   
 }
 
