--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -94,7 +94,7 @@
 
  
 .brandLogo {
-    width: 100%;
+    width: 65%;
     height: 100%;
     padding-left: 10px;
     justify-self: flex-start;
@@ -215,6 +215,16 @@
     border-radius: 20px;
     border-width: 0px;
     font-weight:500;
+
+    @media screen and (max-width: 960px) {
+        transition: 0.8s all ease;
+        max-width: 100% !important;
+        font-size: smaller;
+        white-space: nowrap;
+        text-align: center;
+        left: 0;
+
+    }
     
 }
 
