--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,7 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
 }
 
 a {
@@ -28,6 +29,10 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+}
+
+body > #root > div {
+  height: 100vh;
 }
 
 h1 {
